# unicorn-binance-rest-api

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TASKS.md  environment.yml  llms.txt  meta.yaml  pyproject.toml  requirements.txt  setup.py  unittest_binance_rest_api.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build_wheels.yml  unit-tests.yml
dev/: set_version_config.txt  test_endpoints.py  test_exceptions.py
dev/pypi/: create_wheel.sh  install_packaging_tools.sh  remove_files.sh  upload_wheel.sh
dev/sphinx/: create_docs.sh  install_sphinx.sh
dev/sphinx/source/: changelog.md  conf.py  license.rst  readme.md
docs/: .buildinfo  changelog.html  code_of_conduct.html  contributing.html  copyright.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  security.html  unicorn_binance_rest_api.html
docs/_modules/: index.html
docs/_modules/unicorn_binance_rest_api/: exceptions.html  helpers.html  manager.html
docs/_sources/: changelog.md.txt  contributing.md.txt  copyright.rst.txt  license.rst.txt  readme.md.txt  security.md.txt
examples/: README.md
examples/_archive/: example_buy_and_sell_oco_order_isolated_margin.py  example_doing_something.py  example_easy_migration_from_python-binance.py  example_exchange_endpoints.py  example_exchange_info.py  example_futures_commission_rate.py  example_historical_data.py  example_logging.py  example_orders.py  example_socks5_proxy.py  example_version_of_this_package.py
unicorn_binance_rest_api/: enums.py  exceptions.py  helpers.py  manager.py
